# packages/pension-reservation-api/mod/release_note/controller.go
@@ -1,8 +1,6 @@
 package release_note
 
 import (
-	"pension-reservation-api/openapi/generated"
-
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -14,20 +12,9 @@ func NewController() *Controller {
 
 func (c *Controller) GetLatestReleaseNotes(service *GetLatestReleaseNotesService) fiber.Handler {
 	return func(ctx *fiber.Ctx) error {
-		response := generated.GetReleaseNotesResponse{}
-
-		notes, err := service.GetLatestReleaseNotes()
+		response, err := service.GetLatestReleaseNotes()
 		if err != nil {
 			return err
-		}
-
-		for _, v := range notes {
-			response.Items = append(response.Items, GetReleaseNotesResponseItem{
-				Id:        v.ID,
-				Text:      v.Text,
-				CreatedAt: v.CreatedAt,
-				UpdatedAt: v.UpdatedAt,
-			})
 		}
 
 		return ctx.Status(fiber.StatusOK).JSON(response)
